# msgpackpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake4.lua  vs2010.bat  vs2017.bat
_external/: CMakeLists.txt
_external/asio/: CMakeLists.txt
_external/catch/: CMakeLists.txt
_external/msgpack/: CMakeLists.txt
_external/msgpackpp/: CMakeLists.txt
client/: client.cpp  premake4.lua
msgpack/: premake4.lua
msgpack-asiorpc/: premake4.lua
msgpack-rpc-asio/: CMakeLists.txt  premake4.lua
msgpack-rpc-asio/include/: msgpack_rpc.h  msgpackpp.h  windows_pipe_transport.h  windows_stream_transport.h
msgpack/src/: objectc.c
msgpackpp/: CMakeLists.txt
sample/: CMakeLists.txt  main.cpp  premake4.lua
samples/: CMakeLists.txt
samples/dispatcher/: main.cpp
samples/pingpong/: CMakeLists.txt  main.cpp
samples/sample1/: CMakeLists.txt  main.cpp  premake4.lua
samples_cpp17/: CMakeLists.txt
samples_cpp17/basic/: CMakeLists.txt  basic.cpp
samples_cpp17/cpp17_dispatcher/: CMakeLists.txt  main.cpp
samples_cpp17/cpp17_nvim/: CMakeLists.txt  main.cpp
samples_cpp17/dispatcher/: CMakeLists.txt  main.cpp
samples_cpp17/sample2/: CMakeLists.txt  client.cpp  main.cpp
samples_cpp20/: CMakeLists.txt
samples_cpp20/cpp20_dispatch/: CMakeLists.txt  main.cpp
samples_cpp20/cpp20_pingpong/: CMakeLists.txt  main.cpp
samples_cpp20/dispatch_20/: CMakeLists.txt  (+1 more)
test/: CMakeLists.txt  call.cpp  client.cpp  dispatcher.cpp  error.cpp  fixture.h  main.cpp  msgpack.cpp  pipeline.cpp  premake4.lua  request.cpp  rpc.cpp  serialize.cpp  simple.cpp  stream.cpp
(+23 files in other folders)
