set(TARGET_NAME cpp20_dispatch)
add_executable(${TARGET_NAME} main.cpp)
set_property(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 20)
target_compile_options(${TARGET_NAME} PUBLIC $<$<C_COMPILER_ID:MSVC>:/await>)
target_compile_definitions(${TARGET_NAME} PRIVATE ASIO_DISABLE_STD_COROUTINE)
target_link_libraries(${TARGET_NAME} PRIVATE asio msgpack-rpc-asio)
